added the intro paragraph and the homepage title

--- a/index.html
+++ b/index.html
@@ -8,3 +8,10 @@
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/script.js"></script>
 </head>
+
+<body>
+<div class="intro" style="background-image: url(images/karthik-garikapati-oBbTc1VoT-0-unsplash.jpg);">
+    <h1><i>THE HEARTY SLICE DELIVERY</i></h1>
+    <p>Welcome To The Hearty Slice Delivery Webpage Where Every Order is a Graet Taste!</p>
+</div>
+</body>
