make changes to html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
 <div class="intro" style="background-image: url(images/karthik-garikapati-oBbTc1VoT-0-unsplash.jpg);">
     <h1><i>THE HEARTY SLICE DELIVERY</i></h1>
-    <p>Welcome To The Hearty Slice Delivery Webpage Where Every Order is a Graet Taste!</p>
+    <p>Welcome To The Hearty Slice Delivery Webpage Where Every Order is a Greatt Taste!</p>
 </div>
 </body>
