added a form for customer details

--- a/index.html
+++ b/index.html
@@ -14,4 +14,9 @@
     <h1><i>THE HEARTY SLICE DELIVERY</i></h1>
     <p>Welcome To The Hearty Slice Delivery Webpage Where Every Order is a Greatt Taste!</p>
 </div>
+<form class="customer" style="background-image: url(images/damian-barczak-j-jXnBFahhU-unsplash.jpg);">
+    <h3>CUSTOMER DETAILS</h3>
+  <b> Customer Name</b> <input  type="text"size 20 placeholder="Customer Name"/>
+  <b>Phone Number</b> <input type="text"size 20 placeholder="Phone Number"/><br><br>
+ </form >
 </body>
