made changes to html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
       <b>Phone Number</b>
       <input type="text" size 20 placeholder="Phone Number" /><br /><br />
     </form>
-    <h2>PIZZA SECTION</h2>
-    <form class="pizzalist" id="pizzaitem" action="index.html" method="post">
+
+    <form
+      class="pizzalist"
+      id="pizzaitem"
+      action="index.html"
+      method="post"
+      style="
+        background-image: url(images/mahyar-motebassem-pGA4zHvpo5E-unsplash.jpg);
+      "
+    >
+      <h2>PIZZA SECTION</h2>
       <table class="pizza">
         <tr>
           <th>Pizza Choice</th>
