added a logo to the webpage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         background-image: url(images/karthik-garikapati-oBbTc1VoT-0-unsplash.jpg);
       "
     >
+      <img
+        src="logo/000821-Free-Logo-Maker-create-free-italian-pizza-Logo-design-01.png"
+        id="img"
+        alt="logo"
+      />
       <h1><i>THE HEARTY SLICE DELIVERY</i></h1>
       <p>
         Welcome To The Hearty Slice Delivery Webpage Where Every Order is a
